.provarCaches/00D410000011HE0EAM/objects/rstk__icjobsetmtl__c.object
<CustomObject>
    <description>icjobsetmtl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icjobsetmtl_icjobset__r.rstk__externalid__c &amp; rstk__icjobsetmtl_icitem__r.rstk__externalid__c &amp; TEXT(rstk__icjobsetmtl_oper__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icjobsetmtl_icitem__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_altprice1__c</fullName>
        <description>Alternate Price 1</description>
        <label>Alternate Price 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_altprice2__c</fullName>
        <description>Alternate Price 2</description>
        <label>Alternate Price 2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_extaltprice1__c</fullName>
        <formula>rstk__icjobsetmtl_altprice1__c  *  rstk__icjobsetmtl_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Alternate Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_extaltprice2__c</fullName>
        <formula>rstk__icjobsetmtl_altprice2__c  *  rstk__icjobsetmtl_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Alternate Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_extcost__c</fullName>
        <formula>rstk__icjobsetmtl_unitcost__c * rstk__icjobsetmtl_qtyper__c</formula>
        <label>Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_extprice__c</fullName>
        <formula>rstk__icjobsetmtl_unitprice__c * rstk__icjobsetmtl_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_fixedqty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixed Quantity</description>
        <label>Fixed Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory Item</description>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Job Set Materials</relationshipLabel>
        <relationshipName>icjobsetmtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_icjobcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Job Code</description>
        <label>Job Code</label>
        <referenceTo>rstk__icjobcode__c</referenceTo>
        <relationshipLabel>Job Set Materials (Job Code)</relationshipLabel>
        <relationshipName>icjobsetmtls1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_icjobset__c</fullName>
        <description>Job Set ID</description>
        <label>Job Set ID</label>
        <referenceTo>rstk__icjobset__c</referenceTo>
        <relationshipLabel>Job Set Materials</relationshipLabel>
        <relationshipName>icjobsetmtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_oper__c</fullName>
        <description>Associated Operation</description>
        <label>Associated Operation</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_qtyper__c</fullName>
        <description>Quantity Per</description>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_unitcost__c</fullName>
        <description>Unit Cost</description>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_unitprice__c</fullName>
        <description>Unit Price</description>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetmtl_uom__c</fullName>
        <formula>rstk__icjobsetmtl_icitem__r.rstk__icitem_invuom__r.rstk__syuom_descr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_icjobcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Job Code</description>
        <label>Job Code</label>
        <referenceTo>rstk__icjobcode__c</referenceTo>
        <relationshipLabel>Job Set Materials</relationshipLabel>
        <relationshipName>icjobsetmtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <description>Trigger Options</description>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Job Set Material</label>
    <nameField>
        <label>Job Set Material  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Set Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>